GNOME Bugzilla – Bug 781053
About dialog window is not modal
Last modified: 2017-04-09 03:30:16 UTC
This is the equivalent of bugs #776864 and #776865, but for Sysprof. Making the About dialog modal increases consistency with other GNOME applications. Usability is not hindered because it is unlikely for the user to need to view the About dialog and the contents of the window simultaneously.
Created attachment 349522 [details] [review] app: Make About dialog modal
Created attachment 349523 [details] [review] window: add each instance to each own group
Review of attachment 349523 [details] [review]: LGTM
Review of attachment 349522 [details] [review]: LGTM
Thanks! Attachment 349523 [details] pushed as 987f661 - window: add each instance to each own group