app: make About dialog modal

Makes Sysprof consistent with other GNOME applications.

https://bugzilla.gnome.org/show_bug.cgi?id=781053